refactor: atualizando chamadas das pastas do scr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,16 @@
     "strict": true,
     "baseUrl": "src",
     "paths": {
-      "@api/*": ["scr/api/*"],
-      "@components/*": ["scr/components/*"],
-      "@hooks/*": ["scr/hooks/*"],
-      "@navigation/*": ["scr/navigation/*"],
-      "@screens/*": ["scr/screens/*"],
-      "@services/*": ["scr/services/*"],
-      "@store/*": ["scr/store/*"],
-      "@styles/*": ["scr/styles/*"],
-      "@types/*": ["scr/types/*"],
-      "@utils/*": ["scr/utils/*"]
+      "@api/*": ["api/*"],
+      "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
+      "@navigation/*": ["navigation/*"],
+      "@screens/*": ["screens/*"],
+      "@services/*": ["services/*"],
+      "@store/*": ["store/*"],
+      "@styles/*": ["styles/*"],
+      "@types/*": ["types/*"],
+      "@utils/*": ["utils/*"]
     },
     "esModuleInterop": true,
     "skipLibCheck": true,
