--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-    "expo": "^54.0.12",
+    "expo": "^54.0.13",
     "expo-checkbox": "~5.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
@@ -41,6 +41,7 @@
     "jiti": "^2.6.1",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
+    "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.45.0"
   },
