--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "^54.0.12",
     "expo-checkbox": "~5.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -25,6 +26,7 @@
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "jiti": "^2.6.1",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
+    "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.45.0"
   },
